--- a/index.html
+++ b/index.html
@@ -74,14 +74,7 @@
                                     <div class="collapse navbar-collapse align-items-center justify-content-end" id="navbar_main">
                                         <ul class="navbar-nav">
                                             <li class="nav-item dropdown">
-                                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
-
-                                                <ul class="dropdown-menu">
-                                                    <li class="dropdown">
-                                                        <a href="index.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage</a>
-                                                        <a href="homepage-video.html" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage: Video</a>
-                                                    </li>
-                                                </ul>
+                                                <a href="about.html" class="nav-link">Home</a>
                                             </li>
                                             <li class="nav-item dropdown">
                                                 <a href="about.html" class="nav-link">Nossos Bichanos</a>
@@ -111,7 +104,7 @@
                                             <div class="container container-lg slice--offset-top d-flex align-items-center">
                                                 <div class="col px-0">
                                                     <div class="row">
-                                                        <div class="col-lg-6 slice--offset-top">
+                                                        <div class="col-lg-6">
                                                             <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 animated animation-ended" data-animation-in="fadeInDownBig" data-animation-delay="200" style="
                                                         padding-top: 20px;
                                                         ">Viaje com total Tranquilidade!</h2>
