--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                                             <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
                                                 <div class="icon-block icon-block--style-1-v2">
                                                     <div class="block-icon text-xs-left">
-                                                        <i class="icon-mouse"></i>
+                                                        <img src="https://image.flaticon.com/icons/svg/375/375279.svg">
                                                     </div>
                                                     <div class="block-content">
                                                         <h3 class="heading heading-4 strong-600">Cuidados 01</h3>
@@ -239,7 +239,7 @@
                                             <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
                                                 <div class="icon-block icon-block--style-1-v2">
                                                     <div class="block-icon text-xs-left">
-                                                        <i class="icon-screen-tablet"></i>
+                                                        <img src="https://image.flaticon.com/icons/svg/375/375279.svg">
                                                     </div>
                                                     <div class="block-content">
                                                         <h3 class="heading heading-4 strong-600">Cuidados 02</h3>
@@ -257,7 +257,7 @@
                                             <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInLeft" style="visibility: visible; animation-name: fadeInLeft;">
                                                 <div class="icon-block icon-block--style-1-v2">
                                                     <div class="block-icon text-xs-left">
-                                                        <i class="icon-cloud-download"></i>
+                                                        <img src="https://image.flaticon.com/icons/svg/375/375279.svg">
                                                     </div>
                                                     <div class="block-content">
                                                         <h3 class="heading heading-4 strong-600">Cuidados 03</h3>
@@ -273,7 +273,7 @@
                                             <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
                                                 <div class="icon-block icon-block--style-1-v2">
                                                     <div class="block-icon text-xs-left">
-                                                        <i class="icon-like"></i>
+                                                        <img src="https://image.flaticon.com/icons/svg/375/375279.svg">
                                                     </div>
                                                     <div class="block-content">
                                                         <h3 class="heading heading-4 strong-600">Cuidados 04</h3>
@@ -372,11 +372,11 @@
                             </div>
                         </section>
 
-                        <section class="slice-xl sct-color-1 border-top">
+                        <section class="border-top">
                             <div class="container container-lg">
                                 <div class="section-title section-title--style-1 text-center">
                                     <h3 class="section-title-inner text-normal strong-600">
-                                        <span>In the news</span>
+                                        <span>Nossos Amigos</span>
                                     </h3>
                                 </div>
 
@@ -384,33 +384,9 @@
                                     <div class="col-lg-4">
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
-                                                <img src="https://preview.webpixels.io/boomerang-v3.6.1/assets/images/prv/travel/img-wide-1.jpg" class="img-fluid img-center">
-                                            </div>
-
-                                            <div class="pt-4">
-                                                <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
-                                                <a href="#" class="heading heading-4 d-block strong-600 mt-1">Beware the mountain</a>
-                                                <p class="mt-3">
-                                                    When we strive to become better than we are, everything around us becomes better, too.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-4">
-                                        <div class="block block-image-holder image-animate-wrapper">
-                                            <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://preview.webpixels.io/boomerang-v3.6.1/assets/images/prv/travel/img-wide-2.jpg">
+                                                    <img src="https://preview.webpixels.io/boomerang-v3.6.1/assets/images/prv/travel/img-wide-3.jpg">
                                                 </a>
-                                            </div>
-
-                                            <div class="pt-4">
-                                                <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
-                                                <a href="#" class="heading heading-4 d-block strong-600 mt-1">Listen to the nature</a>
-                                                <p class="mt-3">
-                                                    When we strive to become better than we are, everything around us becomes better, too.
-                                                </p>
                                             </div>
                                         </div>
                                     </div>
@@ -422,13 +398,15 @@
                                                     <img src="https://preview.webpixels.io/boomerang-v3.6.1/assets/images/prv/travel/img-wide-3.jpg">
                                                 </a>
                                             </div>
+                                        </div>
+                                    </div>
 
-                                            <div class="pt-4">
-                                                <span class="heading heading-xs text-uppercase strong-300">Oct 15, 2018</span>
-                                                <a href="#" class="heading heading-4 d-block strong-600 mt-1">Rules not to follow</a>
-                                                <p class="mt-3">
-                                                    When we strive to become better than we are, everything around us becomes better, too.
-                                                </p>
+                                    <div class="col-lg-4">
+                                        <div class="block block-image-holder image-animate-wrapper">
+                                            <div class="block-image image-animate--hover">
+                                                <a href="#">
+                                                    <img src="https://preview.webpixels.io/boomerang-v3.6.1/assets/images/prv/travel/img-wide-3.jpg">
+                                                </a>
                                             </div>
                                         </div>
                                     </div>
@@ -437,16 +415,13 @@
                                 <span class="space-xs-xl"></span>
 
                                 <div class="text-center">
-                                    <a href="#" class="link link-sm link--style-2 text-upeprcase text-uppercase strong-600">
-                                        All posts
-                                        <i class="ion-ios-arrow-right ml-1"></i>
-                                    </a>
+                                    <a href="#" class="link link-sm link--style-2 text-upeprcase text-uppercase strong-600">Conheça todos nossos amigos</a>
                                 </div>
                             </div>
                         </section>
 
-                        <section class="slice-xl bg-base-1" style="padding-top: 350px; padding-bottom: 200px;">
-                            <div class="shape-container" data-shape-fill="sct-color-1" data-shape-style="opaque_waves_1" data-shape-position="top" style="height: 350px;">
+                        <section class="slice pt-200 bg-base-1">
+                            <div class="shape-container" data-shape-fill="sct-color-1" data-shape-style="opaque_waves_1" data-shape-position="top" style="height: 200px;">
                                 <svg class="shape-item" fill="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 300" preserveAspectRatio="none">
                                     <path d="M 1000 299 l 2 -279 c -155 -36 -310 135 -415 164 c -102.64 28.35 -149 -32 -232 -31 c -80 1 -142 53 -229 80 c -65.54 20.34 -101 15 -126 11.61 v 54.39 z"></path> <path d="M 1000 286 l 2 -252 c -157 -43 -302 144 -405 178 c -101.11 33.38 -159 -47 -242 -46 c -80 1 -145.09 54.07 -229 87 c -65.21 25.59 -104.07 16.72 -126 10.61 v 22.39 z"></path> <path d="M 1000 300 l 1 -230.29 c -217 -12.71 -300.47 129.15 -404 156.29 c -103 27 -174 -30 -257 -29 c -80 1 -130.09 37.07 -214 70 c -61.23 24 -108 15.61 -126 10.61 v 22.39 z"></path>
                                 </svg>
@@ -456,9 +431,9 @@
                                 <div class="row justify-content-center">
                                     <div class="col-md-8 text-center">
                                         <h2 class="heading heading-inverse heading-1 strong-600 mt-3">
-                                            Let's create something wonderful together!
+                                            Dê ao seu fiel amigo o melhor e fique tranquilo ao viajar!
                                         </h2>
-                                        <a href="https://goo.gl/9BbH7R" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5">Purchase Boomerang</a>
+                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5">Quero Meu Pet Bem Cuidado!</a>
                                     </div>
                                 </div>
                             </div>
@@ -476,51 +451,23 @@
                                                         <a href="#" style="padding-left: 0;">Home</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">About us</a>
+                                                        <a href="#">Nossos Bichanos</a>
                                                     </li>
                                                     <li>
-                                                        <a href="#">Services</a>
+                                                        <a href="#">Orçamentos</a>
+                                                    </li>
+                                                    <li>
+                                                        <a href="#">Fale Conosco</a>
                                                     </li>
                                                 </ul>
-
-                                                <div class="copyright mt-1">
-                                                    <ul class="copy-links">
-                                                        <li>
-                                                            © 2018 Webpixels
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">Terms</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">Privacy policy</a>
-                                                        </li>
-                                                    </ul>
-                                                </div>
                                             </div>
                                         </div>
 
                                         <div class="col-md-5">
-                                            <div class="text-xs-center text-sm-right">
-                                                <ul class="social-media social-media--style-1-v4">
+                                            <div class="copyright mt-1 text-xs-center text-sm-right">
+												<ul class="copy-links">
                                                     <li>
-                                                        <a href="#" class="facebook" target="_blank" data-toggle="tooltip" data-original-title="Facebook">
-                                                            <i class="fa fa-facebook"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="instagram" target="_blank" data-toggle="tooltip" data-original-title="Instagram">
-                                                            <i class="fa fa-instagram"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Dribbble">
-                                                            <i class="fa fa-dribbble"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" class="dribbble" target="_blank" data-toggle="tooltip" data-original-title="Github">
-                                                            <i class="fa fa-github"></i>
-                                                        </a>
+                                                        © 2019 Tia Ju - Pet Sitter | Copyright
                                                     </li>
                                                 </ul>
                                             </div>
