--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="bootstrap, responsive, template, website, html, theme, ux, ui, web, design, developer, support, business, corporate, real estate, education, school, education, demo, css, framework">
     <meta name="author" content="Webpixels">
 
-    <title>Pet Sitter</title>
+    <title>Tia Ju - Pet Sitter</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="view/css/bootstrap/bootstrap.min.css" type="text/css">
@@ -85,6 +85,16 @@
                                                 <a href="#" class="nav-link">Fale Conosco</a>
                                             </li>
 
+                                            <li class="nav-item dropdown">
+                                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Alterar Cores</a>
+
+                                                <ul class="dropdown-menu">
+                                                    <li class="dropdown">
+                                                        <a href="i" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage</a>
+                                                        <a href="h" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage: Video</a>
+                                                    </li>
+                                                </ul>
+                                            </li>
                                         </ul>
                                     </div>
 
@@ -212,7 +222,7 @@
                                 <span class="clearfix"></span>
 
                                 <div class="fluid-paragraph fluid-paragraph-sm c-gray-light strong-300 text-center animate-on-scroll fadeInDown" data-wow-delay="0.3s" style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInDown;">
-                                    <span id="type_1" class="type-this c-base-1" data-type-this="reposição de ração e higienização dos comedouros...,reposição de água fresca e higienização dos bebedouros/fontes...,higienização da caixa sanitária ou tapetinhos higiênicos/jornal...,brincadeiras e passeio recreativo...,envio de fotos e notícias diárias...,atendimento altamente personalizado!"></span>
+                                    <span id="type_1" class="type-this c-base-2" data-type-this="reposição de ração e higienização dos comedouros...,reposição de água fresca e higienização dos bebedouros/fontes...,higienização da caixa sanitária ou tapetinhos higiênicos/jornal...,brincadeiras e passeio recreativo...,envio de fotos e notícias diárias...,atendimento altamente personalizado!"></span>
                                 </div>
 
                                 <span class="space-xs-xl"></span>
@@ -226,9 +236,9 @@
                                                         <img src="https://image.flaticon.com/icons/svg/375/375279.svg">
                                                     </div>
                                                     <div class="block-content">
-                                                        <h3 class="heading heading-4 strong-600">Cuidados 01</h3>
+                                                        <h3 class="heading heading-4 strong-600">Alimentação</h3>
                                                         <p>
-                                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quisque congue augue rutrum neque iaculis porta.
+                                                            Nos preocupamos com nossos pet's, por isto nos preocupamos em manter comida e água em quantidade adequadas às rotinas diárias do Pet.
                                                         </p>
                                                     </div>
                                                 </div>
@@ -242,9 +252,9 @@
                                                         <img src="https://image.flaticon.com/icons/svg/375/375279.svg">
                                                     </div>
                                                     <div class="block-content">
-                                                        <h3 class="heading heading-4 strong-600">Cuidados 02</h3>
+                                                        <h3 class="heading heading-4 strong-600">Higiene</h3>
                                                         <p>
-                                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quisque congue augue rutrum neque iaculis porta.
+                                                            Não se preocupe pois enquanto estiver distante seu pet estará sempre limpinho e bem higienizado, assim como seus potinhos de comida e água, e também os locais onde ele fizer xixi e cocô.
                                                         </p>
                                                     </div>
                                                 </div>
@@ -260,9 +270,9 @@
                                                         <img src="https://image.flaticon.com/icons/svg/375/375279.svg">
                                                     </div>
                                                     <div class="block-content">
-                                                        <h3 class="heading heading-4 strong-600">Cuidados 03</h3>
+                                                        <h3 class="heading heading-4 strong-600">Medicação</h3>
                                                         <p>
-                                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quisque congue augue rutrum neque iaculis porta.
+                                                            Se seu pet precisa tomar medicações em horários exatos, então não há por que se preocupar, pois sua rotina de medicação será mantida rigorosamente.
                                                         </p>
                                                     </div>
                                                 </div>
@@ -276,9 +286,9 @@
                                                         <img src="https://image.flaticon.com/icons/svg/375/375279.svg">
                                                     </div>
                                                     <div class="block-content">
-                                                        <h3 class="heading heading-4 strong-600">Cuidados 04</h3>
+                                                        <h3 class="heading heading-4 strong-600">Recreação e Carinhos</h3>
                                                         <p>
-                                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quisque congue augue rutrum neque iaculis porta.
+                                                            Sabemos que os pets sentem sua falta enquanto está longe, por isto fazemos o máximo entretelos com brinquedinhos e muito carinho para que seja menos dolorosa sua ausencia.
                                                         </p>
                                                     </div>
                                                 </div>
@@ -289,13 +299,13 @@
                             </div>
                         </section>
 
-                        <section class="slice-xl sct-color-1">
+                        <section class="sct-color-1">
                             <div class="container container-lg">
                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
                                     <div class="col-lg-7">
-                                        <small class="heading heading-sm strong-300 text-uppercase ls-2 c-gray-light">The challenge</small>
+                                        <small class="heading heading-sm strong-300 text-uppercase ls-2 c-gray-light">Depoimentos</small>
                                         <h2 class="heading heading-1 c-base-1 strong-600 mt-3">
-                                            When you possess great treasures within you and try to tell others of them, seldom are you believed.
+                                            Saiba o que nossos clientes acharam de nosso tratamento único e especial a seus amados e fieis amigos.
                                         </h2>
                                     </div>
                                 </div>
@@ -305,15 +315,15 @@
                                 <div class="row">
                                     <div class="col-lg-4">
                                         <p class="lead">
-                                            "People need not fear the unknown if they are capable of achieving what they need and want."
+                                            "Meu cãozinho foi muito bem tratado, meu gatinho foi muito bem tratado..."
                                         </p>
                                         <span class="clearfix"></span>
-                                        <h6 class="heading-sm c-gray-light mt-3">Photos by Bertram Ozzie</h6>
+                                        <h6 class="heading-sm c-gray-light mt-3">Cliente Fulana Ciclana</h6>
                                     </div>
 
                                     <div class="col-lg-6 ml-lg-auto">
                                         <p class="lead">
-                                            She exposed painted fifteen are noisier mistake led waiting. Surprise not wandered speedily husbands although yet end. Are court tiled cease young built fat one man taken. We highest ye friends is exposed equally in. Ignorant had too strictly followed.
+                                            Faça assim como fulana e milhares de outros clientes, escolha o melhor para seu pet. Tenha total tranquilidade e saiba que seu pet está sendo tratado da melhor maneira possivel e recebendo muito amor e carinho durante seu tempo fora.
                                         </p>
                                     </div>
                                 </div>
@@ -327,8 +337,8 @@
                                                 <i class="icon-basic-heart"></i>
                                             </div>
                                             <div class="block-content">
-                                                <h3 class="heading heading-lg c-base-1">97%</h3>
-                                                <h3 class="heading heading-5 strong-500">Happy clients</h3>
+                                                <h3 class="heading heading-lg c-base-1">100%</h3>
+                                                <h3 class="heading heading-5 strong-500">Satisfação</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -339,8 +349,8 @@
                                                 <i class="icon-basic-clockwise"></i>
                                             </div>
                                             <div class="block-content">
-                                                <h3 class="heading heading-lg c-base-1">365x7</h3>
-                                                <h3 class="heading heading-5 strong-500">Customer support</h3>
+                                                <h3 class="heading heading-lg c-base-1">200%</h3>
+                                                <h3 class="heading heading-5 strong-500">de cuidados e carinhos</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -351,8 +361,8 @@
                                                 <i class="icon-basic-webpage-multiple"></i>
                                             </div>
                                             <div class="block-content">
-                                                <h3 class="heading heading-lg c-base-1">200+</h3>
-                                                <h3 class="heading heading-5 strong-500">Built-in layouts</h3>
+                                                <h3 class="heading heading-lg c-base-1">+ de 600</h3>
+                                                <h3 class="heading heading-5 strong-500">clientes satisfeitos</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -360,11 +370,11 @@
                                     <div class="col-lg-3 col-md-6">
                                         <div class="icon-block icon-block--style-1-v5 text-center">
                                             <div class="block-icon block-icon-lg mb-0">
-                                                <i class="icon-software-layers2"></i>
+                                                <i class="icon-basic-webpage-multiple"></i>
                                             </div>
                                             <div class="block-content">
-                                                <h3 class="heading heading-lg c-base-1">970</h3>
-                                                <h3 class="heading heading-5 strong-500">Components &amp; Shortcodes</h3>
+                                                <h3 class="heading heading-lg c-base-1">Sempre</h3>
+                                                <h3 class="heading heading-5 strong-500">a sua disposição</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -372,10 +382,10 @@
                             </div>
                         </section>
 
-                        <section class="border-top">
+                        <section class="pt-100">
                             <div class="container container-lg">
                                 <div class="section-title section-title--style-1 text-center">
-                                    <h3 class="section-title-inner text-normal strong-600">
+                                    <h3 class="section-title-inner c-base-1 text-normal strong-600">
                                         <span>Nossos Amigos</span>
                                     </h3>
                                 </div>
@@ -385,7 +395,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://preview.webpixels.io/boomerang-v3.6.1/assets/images/prv/travel/img-wide-3.jpg">
+                                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZCjC5RIr9x4lBNLada97JHFPYDzS42boj89CQPRMTrkygYp1JMw" style="width: 100%;">
                                                 </a>
                                             </div>
                                         </div>
@@ -395,7 +405,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://preview.webpixels.io/boomerang-v3.6.1/assets/images/prv/travel/img-wide-3.jpg">
+                                                    <img src="http://4.bp.blogspot.com/-9KRK7fF2nnE/UhUHWioPXNI/AAAAAAAAXVE/RtAa5Q8_zgc/s1600/02.jpg" style="width: 100%;">
                                                 </a>
                                             </div>
                                         </div>
@@ -405,7 +415,7 @@
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
-                                                    <img src="https://preview.webpixels.io/boomerang-v3.6.1/assets/images/prv/travel/img-wide-3.jpg">
+                                                    <img src="https://associacaoprotetoranimaisvideira.files.wordpress.com/2014/05/image0017.jpg?w=490" style="width: 100%;">
                                                 </a>
                                             </div>
                                         </div>
