--- a/index.html
+++ b/index.html
@@ -24,18 +24,6 @@
     <link rel="stylesheet" href="view/css/plugin/animate.min.css" type="text/css">
     <link rel="stylesheet" href="view/css/plugin/jquery.fancybox.min.css">
 
-    <!-- Icons -->
-    <link rel="stylesheet" href="view/css/icons/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="view/css/icons/ionicons.min.css" type="text/css">
-    <link rel="stylesheet" href="view/css/icons/line-icons.css" type="text/css">
-    <link rel="stylesheet" href="view/css/icons/line-icons-pro.css" type="text/css">
-
-    <!-- Linea Icons -->
-    <link rel="stylesheet" href="view/css/fonts/linea/arrows/linea-icons.css" type="text/css">
-    <link rel="stylesheet" href="view/css/fonts/linea/basicf/linea-icons.css" type="text/css">
-    <link rel="stylesheet" href="view/css/fonts/linea/ecommerce/linea-icons.css" type="text/css">
-    <link rel="stylesheet" href="view/css/fonts/linea/software/linea-icons.css" type="text/css">
-
     <!-- Global style (main) -->
     <link id="stylesheet" type="text/css" href="view/css/boomerang-startup-agency.min.css" rel="stylesheet" media="screen">
 
@@ -90,8 +78,10 @@
 
                                                 <ul class="dropdown-menu">
                                                     <li class="dropdown">
-                                                        <a href="i" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage</a>
-                                                        <a href="h" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Homepage: Video</a>
+                                                        <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Azul</a>
+                                                        <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Rosa</a>
+                                                        <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Verde</a>
+                                                        <a href="#" class="dropdown-item" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Gradiente</a>
                                                     </li>
                                                 </ul>
                                             </li>
@@ -496,7 +486,9 @@
     <!-- END: body-wrap -->
 
     <!-- SCRIPTS -->
-    <a href="#" class="back-to-top btn-back-to-top back-to-top-fade-out"></a>
+    <a href="https://api.whatsapp.com/send?phone=555195266290" target="_BLANK">
+        <img class="back-to-top-is-visible btn-back-to-top back-to-top-fade-out" style="z-index: 99;opacity: 1; width: 70px;" src="https://image.flaticon.com/icons/svg/220/220236.svg">
+    </a>
 
     <!-- Core -->
     <script src="https://preview.webpixels.io/boomerang-v3.6.1/assets/vendor/jquery/jquery.min.js"></script>
