--- a/index.html
+++ b/index.html
@@ -93,40 +93,25 @@
                             </nav>
                         </div>
 
-                        <section class="swiper-js-container background-image-holder">
-                            <div class="swiper-container swiper-container-horizontal" data-swiper-autoplay="true" data-swiper-effect="slide" data-swiper-items="1" data-swiper-space-between="0">
-                                <div class="swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(0px, 0px, 0px);">
-                                    <!-- Slide -->
-                                    <div class="swiper-slide swiper-slide-active" data-swiper-autoplay="8000" style="width: 1349px;">
-                                        <div class="holder-item holder-item-light has-bg-cover bg-size-cover" style="background-image: url(https://i.imgur.com/tZ4FbTD.jpg);background-position: bottom center;">
-                                            <span class="mask mask-base-1--style-1"></span>
-                                            <div class="container container-lg slice--offset-top d-flex align-items-center">
-                                                <div class="col px-0">
-                                                    <div class="row">
-                                                        <div class="col-lg-6">
-                                                            <h2 class="heading heading-xl strong-600 text-normal line-height-1_2">Viaje com total Tranquilidade!</h2>
-                                                            <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Nós sabemos que o bem estar de seu Pet é tudo para você, por isto nós da Tia Ju - Pet Sitter nos especializamos nos cuidados de seu amigo animal, para prover a ele e a você o melhor atendimento possível.</p>
+                        <section class="slice slice--offset-top bg-base-1">
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-lg-6 pt-5">
+                                        <h2 class="heading heading-xl strong-600 text-normal line-height-1_2 text-white">Viaje com total Tranquilidade!</h2>
+                                        <p class="lead animated mt-4 animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="200">Nós sabemos que o bem estar de seu Pet é tudo para você, por isto nós da Tia Ju - Pet Sitter nos especializamos nos cuidados de seu amigo animal, para prover a ele e a você o melhor atendimento possível.</p>
 
-                                                            <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="
-                                                            ">Quero meu pet bem cuidado!</a>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-circle btn-outline animated animation-ended" data-animation-in="fadeInUpBig" data-animation-delay="1000" data-scroll-to="#sct_what_we_do" style="z-index: 99;">Quero meu pet bem cuidado!</a>
                                     </div>
                                 </div>
-
-                                <div class="shape-container" data-shape-fill="sct-color-1" data-shape-position="bottom" style="height: 130px;">
-                                    <svg class="shape-item" fill="" viewBox="0 0 1000 300" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path d="M 0 246.131 C 0 246.131 31.631 250.035 47.487 249.429 C 65.149 248.755 82.784 245.945 99.944 241.732 C 184.214 221.045 222.601 171.885 309.221 166.413 C 369.892 162.581 514.918 201.709 573.164 201.709 C 714.375 201.709 772.023 48.574 910.547 21.276 C 939.811 15.509 1000 24.025 1000 24.025 L 1000 300.559 L -0.002 300.559 L 0 246.131 Z"></path>
-
-                                    </svg>
-                                </div>
+                            </div>
+                            <div class="shape-container" data-shape-fill="base-5" data-shape-style="" data-shape-position="bottom">
+                                <svg class="shape-item" fill="" viewBox="0 0 1000 300" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M 0 246.131 C 0 246.131 31.631 250.035 47.487 249.429 C 65.149 248.755 82.784 245.945 99.944 241.732 C 184.214 221.045 222.601 171.885 309.221 166.413 C 369.892 162.581 514.918 201.709 573.164 201.709 C 714.375 201.709 772.023 48.574 910.547 21.276 C 939.811 15.509 1000 24.025 1000 24.025 L 1000 300.559 L -0.002 300.559 L 0 246.131 Z"></path>
+                                </svg>
                             </div>
                         </section>
 
-                        <section class="sct-color-1" id="sct_what_we_do">
+                        <section class="sct-color-1 pt-3" id="sct_what_we_do">
                             <div class="container container-lg">
                                 <div class="row cols-xs-space cols-sm-space cols-md-space">
                                     <div class="col-12 col-lg-4 animate-on-scroll fadeInDown" style="visibility: visible; animation-name: fadeInDown;">
@@ -194,7 +179,7 @@
                                                 Seu bichinho fica no conforto do seu próprio lar, dormindo em sua caminha quentinha, com os cheiros familiares, próprios brinquedinhos, com suas rotinas e ambientes inalterados.
                                             </h2>
 
-                                            <a href="#" class="btn btn-styled btn-base-1 btn-circle mt-5">Quero meu Pet Bem Cuidado!</a>
+                                            <a href="#" class="btn btn-styled btn-base-1 btn-circle mt-5" style="z-index: 99">Quero meu Pet Bem Cuidado!</a>
                                         </div>
                                     </div>
                                 </div>
@@ -235,7 +220,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-lg-6 col-sm-12 col-12">
+                                        <div class="col-lg-6 col-sm-12 col-12 sm-top-20">
                                             <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
                                                 <div class="icon-block icon-block--style-1-v2">
                                                     <div class="block-icon text-xs-left">
@@ -269,7 +254,7 @@
                                             </div>
                                         </div>
 
-                                        <div class="col-lg-6 col-sm-12 col-12">
+                                        <div class="col-lg-6 col-sm-12 col-12 sm-top-20">
                                             <div class="feature feature--boxed-border feature--bg-1 z-depth-2-top animate-on-scroll fadeInRight" style="visibility: visible; animation-name: fadeInRight;">
                                                 <div class="icon-block icon-block--style-1-v2">
                                                     <div class="block-icon text-xs-left">
@@ -372,7 +357,7 @@
                             </div>
                         </section>
 
-                        <section class="pt-100">
+                        <section class="pt-100 sm-top-50 sm-bot-50">
                             <div class="container container-lg">
                                 <div class="section-title section-title--style-1 text-center">
                                     <h3 class="section-title-inner c-base-1 text-normal strong-600">
@@ -391,7 +376,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 sm-top-20">
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
@@ -401,7 +386,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-lg-4">
+                                    <div class="col-lg-4 sm-top-20">
                                         <div class="block block-image-holder image-animate-wrapper">
                                             <div class="block-image image-animate--hover">
                                                 <a href="#">
@@ -412,28 +397,26 @@
                                     </div>
                                 </div>
 
-                                <span class="space-xs-xl"></span>
-
-                                <div class="text-center">
+                                <div class="text-center pt-5 sm-top-50">
                                     <a href="#" class="link link-sm link--style-2 text-upeprcase text-uppercase strong-600">Conheça todos nossos amigos</a>
                                 </div>
                             </div>
                         </section>
 
                         <section class="slice pt-200 bg-base-1">
-                            <div class="shape-container" data-shape-fill="sct-color-1" data-shape-style="opaque_waves_1" data-shape-position="top" style="height: 200px;">
+                            <div class="shape-container slice-bottom" data-shape-fill="sct-color-1" data-shape-style="opaque_waves_1" data-shape-position="top">
                                 <svg class="shape-item" fill="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 300" preserveAspectRatio="none">
-                                    <path d="M 1000 299 l 2 -279 c -155 -36 -310 135 -415 164 c -102.64 28.35 -149 -32 -232 -31 c -80 1 -142 53 -229 80 c -65.54 20.34 -101 15 -126 11.61 v 54.39 z"></path> <path d="M 1000 286 l 2 -252 c -157 -43 -302 144 -405 178 c -101.11 33.38 -159 -47 -242 -46 c -80 1 -145.09 54.07 -229 87 c -65.21 25.59 -104.07 16.72 -126 10.61 v 22.39 z"></path> <path d="M 1000 300 l 1 -230.29 c -217 -12.71 -300.47 129.15 -404 156.29 c -103 27 -174 -30 -257 -29 c -80 1 -130.09 37.07 -214 70 c -61.23 24 -108 15.61 -126 10.61 v 22.39 z"></path>
+                                    <path d="M 1000 299 l 2 -279 c -155 -36 -310 135 -415 164 c -102.64 28.35 -149 -32 -232 -31 c -80 1 -142 53 -229 80 c -65.54 20.34 -101 15 -126 11.61 v 54.39 z"></path>
                                 </svg>
                             </div>
 
-                            <div class="container container-lg">
+                            <div class="container container-lg sm-top-50">
                                 <div class="row justify-content-center">
                                     <div class="col-md-8 text-center">
                                         <h2 class="heading heading-inverse heading-1 strong-600 mt-3">
                                             Dê ao seu fiel amigo o melhor e fique tranquilo ao viajar!
                                         </h2>
-                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5">Quero Meu Pet Bem Cuidado!</a>
+                                        <a href="#" class="btn btn-styled btn-lg btn-white btn-outline btn-circle mt-5" style="z-index: 99;">Quero Meu Pet Bem Cuidado!</a>
                                     </div>
                                 </div>
                             </div>
@@ -465,7 +448,7 @@
 
                                         <div class="col-md-5">
                                             <div class="copyright mt-1 text-xs-center text-sm-right">
-												<ul class="copy-links">
+                                                <ul class="copy-links">
                                                     <li>
                                                         © 2019 Tia Ju - Pet Sitter | Copyright
                                                     </li>
@@ -486,10 +469,8 @@
     <!-- END: body-wrap -->
 
     <!-- SCRIPTS -->
-    <a href="https://api.whatsapp.com/send?phone=555195266290" target="_BLANK">
-        <img class="back-to-top-is-visible btn-back-to-top back-to-top-fade-out" style="z-index: 99;opacity: 1; width: 70px;" src="https://image.flaticon.com/icons/svg/220/220236.svg">
-    </a>
 
+    
     <!-- Core -->
     <script src="https://preview.webpixels.io/boomerang-v3.6.1/assets/vendor/jquery/jquery.min.js"></script>
     <script src="https://preview.webpixels.io/boomerang-v3.6.1/assets/vendor/popper/popper.min.js"></script>
