--- a/index.html
+++ b/index.html
@@ -87,13 +87,12 @@
                                             </li>
                                         </ul>
                                     </div>
-
-
                                 </div>
                             </nav>
                         </div>
 
-                        <section class="slice slice--offset-top bg-base-1">
+                        <section class="slice slice--offset-top bg-base-1" style="background-image: url(https://i.imgur.com/tZ4FbTD.jpg);background-position: bottom center;">
+                            <span class="mask mask-base-1--style-1"></span>
                             <div class="container">
                                 <div class="row">
                                     <div class="col-lg-6 pt-5">
